# sol-ledger-protocol-oss

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.build.json  tsconfig.json
.github/: pull_request_template.md
.github/workflows/: check.yml
crates/sol-ledger-cli/: Cargo.toml
crates/sol-ledger-cli/src/: main.rs
crates/sol-ledger-schema/: Cargo.toml
crates/sol-ledger-schema/examples/: generate-types.rs
crates/sol-ledger-schema/schemas/: artifact-ref.schema.json  event-envelope.schema.json  security-policy.schema.json
crates/sol-ledger-schema/src/: generated.rs  lib.rs
docs/: PERFORMANCE.md  ROADMAP.md  consumer-compatibility.md  open-telemetry-mapping.md  protocol.md  threat-model.md  versioning.md  w3c-prov-mapping.md
fixtures/invalid/: artifact-ref.json  event-envelope.json  provenance-edge.json  security-policy.json
fixtures/valid/: artifact-ref.json  event-envelope.json  provenance-edge.json  security-policy.json
schemas/: provenance-edge.schema.json
scripts/: audit-secrets.mjs  audit-secrets.test.mjs  fixtures.test.mjs  generate-types.mjs  generated-types.test.mjs  interop.test.mjs  validate-fixtures.mjs
tools/sol-ledger-schema-generator/: Cargo.toml
tools/sol-ledger-schema-generator/src/: main.rs
