[workspace]
members = ["crates/sol-ledger-schema", "crates/sol-ledger-cli", "tools/sol-ledger-schema-generator"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/Kota-Ohno/sol-ledger-protocol-oss"
homepage = "https://github.com/Kota-Ohno/sol-ledger-protocol-oss"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
hex = "0.4"
jsonschema = "0.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_jcs = "0.1"
sha2 = "0.10"
