[package]
name = "sol-ledger-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Local tamper-evident chain verifier for Sol Ledger protocol records"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_jcs.workspace = true
sha2.workspace = true
sol-ledger-schema = { path = "../sol-ledger-schema" }
