[package]
name = "sol-ledger-schema"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Schema validation and generated Rust types for Sol Ledger protocol records"
keywords = ["ai", "audit", "provenance", "schema"]
categories = ["data-structures", "development-tools"]

[dependencies]
anyhow.workspace = true
jsonschema.workspace = true
serde_json.workspace = true
serde.workspace = true
