[package]
name = "sol-ledger-schema-generator"
version.workspace = true
edition.workspace = true
license-file.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
quote = "1.0.40"
schemars = "0.8.22"
serde_json.workspace = true
typify = { version = "=0.7.0", default-features = false }
